# roxy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
legacy/: nginx.conf  requirements.txt  server.py  setup.sh
legacy/static/ciscoish/: ciscoish.css
roxy/: .gitignore  README.md  __init__.py  cli.py  display.py  nginx.conf  server.py  service.py  setup.py  setup.sh  setup_commands.py
roxy/static/: script.js  styles.css
roxy/static/ciscoish/: ciscoish.css
roxy/templates/: index.html
tests/: __init__.py  test_integration.py  test_server.py  test_service.py
