[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roxy"
version = "1.0.0"
description = "A port proxy management tool with CLI interface"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Roxy Team", email = "team@roxy.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.0.0",
    "gunicorn>=20.0.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "psutil>=5.8.0",
]

[project.scripts]
roxy = "roxy.cli:cli"

[project.urls]
Homepage = "https://github.com/example/roxy"
Repository = "https://github.com/example/roxy"
Issues = "https://github.com/example/roxy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["roxy*"]

[tool.setuptools.package-data]
roxy = [
    "static/**/*",
    "templates/**/*",
]